Bug 123909 - FILEOPEN PPTX: 5 Second Delay Added to Custom Animations Sound, No sound on preview
Summary: FILEOPEN PPTX: 5 Second Delay Added to Custom Animations Sound, No sound on p...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords: filter:pptx
Depends on:
Blocks:
 
Reported: 2019-03-06 20:47 UTC by Luke
Modified: 2020-05-04 14:50 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2019-03-06 20:47:18 UTC
This is a follow up to Bug 44223 which added sound to slide transitions. This is about the missing sound in slide animations. 

Steps to reproduce:
1. Open attachment 145684 [details]
2. Start slideshow

Expected results:
1. Both the animation sound,"wind.wav" and the transition sound, Applause are played.

Actual results:
1. Only the applause transition is played
Comment 1 Luke 2019-03-06 20:51:11 UTC
Note: attachment 145685 [details] shows that the PPT format is correctly imported. Both sounds play.
Comment 2 Mark Hung 2019-03-14 12:01:14 UTC
I can hear the wind.wav, although it comes out much later. ( I waited 4 or 5 seconds after the heart appears. I didn't check why it started so late. ) Can you check again?
Comment 3 Luke 2019-03-14 17:36:00 UTC
Yes, if you wait more than 5 seconds after the animation shows, the sound will play. The sound should play concurrently with the animation like the PPT file. 

If you preview the sound effect in Impress, no sound will play. The sound effect in the PPT file will correctly preview.
Format->Animation->Effect Options->Preview

If you save the file and open in Powerpoint, the sound also plays 5 seconds after the animation has completed. If you check the animation properties, it has no sound effect associated with it.
Comment 4 Mark Hung 2019-03-16 12:29:56 UTC
Modify the title because the issue happened without saving. Also try to avoid mixing any FILESAVE and FILEOPEN issue.
Comment 5 Commit Notification 2019-03-20 11:42:53 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/0546af3643114b5adf6e33f49d6834eb74ae793b%5E%21

tdf#123909 fix event source that refers to a timenode.

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Luke 2019-03-20 19:56:29 UTC
Thanks Mark! With your fix, the sound now plays without a delay. Verified FIXED in Version: 6.3.0.0.alpha0+ (x64)
Build ID: 0fb66ff74cbe2e767b91f05b123c782f59ac39ab

Unfortunately, the export is still not working correctly. Nor can you preview PPTX sound effects. I filed the export bug as Bug 124230. How do you want to handle the audio preview bug?