tdf#123909 fix event source that refers to a timenode.

p:tn (see below) were treated as delay value instead of timenode id.

  <p:stCondLst>
    <p:cond evt="begin" delay="0">
      <p:tn val="5"/>
    </p:cond>
  </p:stCondLst>

Just convert the timenode id to XAnimationNode and set
the event source properly.

Change-Id: Ib408be6714c6ac70dad7018e544e560cf59a40c0